--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>TP ENG SOFT - CI CD</h1>
         <h2> primeiro commit no DEVELOP: Luiz Felipe R Noro</h2>
         <h2> segundo commit no DEVELOP: Luiz B L Reimann (gayzolinha fan de Xbox)</h2>
+        <h2> segundo commit no DEVELOP: Yuri F de Souza (Menino mais Gato da Praia Grande)</h2>
 </body>
 </html>
